<resources>
    <string name="app_name">AlarmX</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="alarm_name">アラームの名前</string>
    <string name="action_save">保存</string>
    <string name="action_delete">削除</string>
    <string name="alarm_save_msg">アラームを設定しました</string>
    <string name="alarm_delete_msg">アラームを削除しました</string>
    <string name="alarm_select_delete_msg">%1$d個のアラームを削除しました</string>
    <string name="title_wake_up">おはようございます</string>
    <string name="title_confirm">アラーム一覧</string>
    <string name="request_code">リクエストコード</string>
    <string name="rv_position">位置</string>
    <string name="alarm_id">アラームID</string>
    <string name="alarm_id_On_list">アラームIDの一覧</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="stop">停止</string>
    <string name="setting">設定</string>
    <string name="background_image">背景画像</string>
    <string name="choose">選択</string>
    <string name="dialog_title">権限の設定</string>
    <string name="dialog_message">権限を要求</string>
    <string name="dialog_ok">設定を開く</string>
    <string name="alarmMusic">アラーム音</string>
    <string name="song_name">名前_歌</string>
    <string name="music_list">音楽一覧</string>
    <string name="select_music_uri">selectMusicUri</string>
    <string name="textNot">なし</string>
    <string name="menu_popup_delete">削除</string>
    <string name="menu_popup_copy">コピー</string>
    <string name="next_alarm_text">次のアラーム</string>
    <string name="next_alarm">アラームは%1$s時間%2$s分後に鳴ります</string>
    <string name="next_alarm_minute">アラームは%1$s分後に鳴ります</string>
    <string name="next_alarm_no_minute">アラームは1分以内に鳴ります</string>
    <string name="next_alarm_no">今後のアラームはありません</string>
    <string name="wakeUp_text_date">%1$d月%2$d日</string>
    <string name="wakeUp_text_time">%1$s</string>
    <string name="nav_home">home</string>
    <string name="nav_setting">setting</string>
    <string name="menu_popup_preview">プレビュー</string>
    <string name="back">back</string>
    <string name="select_toolbar_title">%1$d個のアラームを選択中</string>
    <string name="tab1">音楽</string>
    <string name="tab2">着信音</string>
    <string name="musicImportText">音楽をインポート</string>
    <string name="alarm_label">ラベル</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="alarm_input_music_text">アラーム音は設定されていません</string>
    <string name="toggle_music_uri">音楽のトグル</string>
    <string name="alarm_edit_text_error">"15文字以内にしてください"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="async_error">非同期エラー</string>
</resources>