<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/Card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    card_view:cardBackgroundColor="@color/toggle_on_back"
    card_view:cardCornerRadius="15dp"
    android:elevation="5dp"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/toggle_on"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_weight="0.3" />
            <TextView
                android:id="@+id/alarm_label_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggle_switch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:textColor="#3e3e3e"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:el_duration="400"
            card_view:el_parallax="0.5">

            <View
                android:id="@+id/card_view_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorOnPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="0.7"
                        android:orientation="vertical">
                        <TimePicker
                            android:id="@+id/time_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.3"
                        android:padding="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:orientation="vertical"
                            android:gravity="center">

                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/edit_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:clickable="true"
                                android:focusable="true"
                                android:textStyle="bold"
                                card_view:backgroundTint="@color/colorPrimaryVariantDark"
                                card_view:fabSize="normal"
                                card_view:srcCompat="@drawable/ic_edit_label" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:orientation="vertical"
                            android:gravity="center">
                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/copy_alarm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:clickable="true"
                                android:focusable="true"
                                android:textStyle="bold"
                                card_view:fabSize="normal"
                                card_view:backgroundTint="@color/colorPrimaryVariantDark"
                                card_view:srcCompat="@drawable/ic_card_copy"/>
                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/music_sel_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_corners"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:foreground="?android:attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.95">
                        <TextView
                            android:id="@+id/input_musicName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="@string/alarm_input_music_text"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.05"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/arrow_right">

                    </ImageView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:padding="10dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/input_action_delete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/action_delete"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                            android:textStyle="bold"
                            android:background="@drawable/shape_corners"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:padding="10dp">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/input_action_save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/action_save"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                            android:textStyle="bold"
                            android:background="@drawable/shape_corners"/>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>